WebCore/rendering/RenderThemeWin.h
@@ -99,6 +99,7 @@ public:
     virtual int buttonInternalPaddingTop() const;
     virtual int buttonInternalPaddingBottom() const;
 
+    virtual void adjustSearchFieldStyle(CSSStyleSelector*, RenderStyle*, Element*) const;
     virtual bool paintSearchField(RenderObject*, const RenderObject::PaintInfo&, const IntRect&);
 
     virtual void adjustSearchFieldCancelButtonStyle(CSSStyleSelector*, RenderStyle*, Element*) const;
